--- a/style.css
+++ b/style.css
@@ -41,6 +41,18 @@ img {
   text-align: center;
 }
 
+a:link, a:visited {
+	color: black;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  color:  hotpink;
+  text-decoration: none;
+}
+
 /**************************************/
 @media (min-width: 700px) {
   .wrapper {
