--- a/style.css
+++ b/style.css
@@ -1,22 +1,58 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: black;
-  padding: 10px;
+/**************************************/
+/* Basics */
+body {
+  padding: 1rem;
+  font-family: 'Palanquin', sans-serif;
 }
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.9);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  height: 240px;
-  padding: 20px;
-  font-size: 30px;
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 1rem;
+  color: deepskyblue;
+  font-family: 'Bebas Neue', cursive;
+}
+
+h3 {
+  text-align: right;
+}
+
+img {
+  width: 19.5%;
+  height: auto;
   text-align: center;
 }
 
-* {
-  box-sizing: border-box;
+a:link, a:visited {
+	color: deepskyblue;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
 }
 
+a:hover, a:active {
+  color:  hotpink;
+  text-decoration: none;
+}
+
+.history {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+/**************************************/
+/* Form */
 [type=radio] { 
   position: absolute;
   opacity: 0;
@@ -35,48 +71,6 @@
   outline: 5px solid black;
 }
 
-img {
-  width: 19.7%;
-  height: auto;
-  text-align: center;
-}
-
-a:link, a:visited {
-	color: black;
-  text-decoration: none;
-  text-align: center;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  color:  hotpink;
-  text-decoration: none;
-}
-
-/**************************************/
-@media (min-width: 700px) {
-  .wrapper {
-    overflow: hidden;
-  }
-  .wrapper > * {
-    float: left;
-    padding: 2em 2em;
-  }
-}
-
-@media (min-width: 700px) {
-  .contacts {
-    width: 30%;
-    min-height: 620px;
-  }
-}
-
-@media (min-width: 700px) {
-  .form {
-    width: 70%;
-  }
-}
-
 form p {
   float: left;
   width: 33.3%;
@@ -86,30 +80,26 @@ form p:last-child {
   width: 100%;
 }
 
-
 /**************************************/
-body {
-  padding: 1rem;
-  font-family: 'Palanquin', sans-serif;
+/* Text Boxes & Button */
+* {
+  box-sizing: border-box;
 }
 
-textarea { resize: none; }
-
-.wrapper {
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-}
-.wrapper > * {
-  padding: 1em;
+textarea { 
+  resize: none; 
 }
 
-ul {
-  list-style: none;
-  padding: 0;
+input:focus,
+textarea:focus {
+  outline: 3px solid deepskyblue;
 }
 
-
-.form {
-  background: #fff;
+input,
+textarea,
+button {
+  width: 100%;
+  border: 1px solid gainsboro;
 }
 
 button,
@@ -129,42 +119,18 @@ button:hover, button:focus {
   outline: 0;
 }
 
-.contain {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1em;
-}
-@media (min-width: 600px) {
-  .contain {
+/**************************************/
+/* Different Screen Sizes */
+
+@media (min-width: 700px) {
+  .form {
+    width: 70%;
+    text-align: center;
+    margin: auto;
     padding: 0;
   }
-}
 
-h1,
-ul {
-  margin: 0;
-}
-
-h1 {
-  margin-bottom: 1rem;
-  color: deepskyblue;
-  font-family: 'Bebas Neue', cursive;
-}
-
-input:focus,
-textarea:focus {
-  outline: 3px solid deepskyblue;
-}
-
-input,
-textarea,
-button {
-  width: 100%;
-  border: 1px solid gainsboro;
-}
-
-p {
-  margin: 0;
-  padding: 0;
+  h3 {
+    margin-right: 15%;
+  }
 }
