--- a/style.css
+++ b/style.css
@@ -29,7 +29,18 @@ h2 {
   padding: 0;
   text-align: center;
   margin-bottom: 1rem;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Bebas Neue', cursive;
+  color: gainsboro;
+
+  width: 100%;  
+  border-bottom: 1px solid gainsboro; 
+  line-height: 0.1em;
+  margin: 10px 0 20px; 
+}
+
+h2 span { 
+  background:#fff; 
+  padding:0 10px; 
 }
 
 h1 .heading {
